--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,29 +46,69 @@ body {
     right: 0;
     width: 100%;
     height: 70%;
+    canvas {
+        position: absolute;
+        right: 0;
+    }
 }
-.visualization-module__buttons {
+.visualization-module__controls {
     position: absolute;
     top: 1rem;
     right: 1rem;
+
     button {
         background: white;
     }
-    // .visualization-module__buttons {
+    .visualization-module__control-icon {
+        padding: 0.5rem;
+        display: inline-block;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        background: lighten($color_black, 10%);
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        svg {
+            stroke: white;
+        }
+    }
+    &:hover {
+        .visualization-module__control-content {
+            opacity: 1;
+        }
+    }
+    .visualization-module__control-content {
+        opacity: 0;
+        transition: opacity 250ms ease-in-out;
+        border-radius: 4px;
+        position: absolute;
+        white-space: nowrap;
+        right: 2.75rem;
+        top: 0;
+        background: white;
+        padding: 0 1rem;
+        &:after {
+            content: "";
+            border: 8px solid transparent;
+            border-left-color: white;
+            position: absolute;
+            right: -16px;
+            top: calc(50% - 8px);
+        }
 
-    //     display: inline-block;
-    //     width: 2rem;
-    //     height: 2rem;
-    //     border-radius: 50%;
-    //     background: lighten($color_black, 10%);
-    //     text-align: center;
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: center;
-    //     svg {
-    //         stroke: white;
-    //     }
-    // }
+        button {
+            background: white;
+            display: inline;
+            padding: 0 0.5em;
+            margin: 0;
+            border: none;
+            box-shadow: none;
+            text-transform: none;
+            letter-spacing: 0;
+        }
+    }
 }
 .visualization-module__options {
     position: absolute;
